# Void-and-Function-Pointers

./: CMakeLists.txt  Makefile  cscd240Lab14.c  simpleOutput.txt
genericArray/: genericArray.c
stock/: stock.c
utils/: fileUtils.c  utils.c  utils.h
